Implemented the initial view.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
     <head>
-        <title>Simulation</title>
+        <title>Web-Agent (a.k.a., vacuumworld-ts)</title>
+        <link rel="stylesheet" href="/css/index.css">
     </head>
     <body>
         <script type="module" src="/vacuumworld-ts/dist/main.js"></script>
-        <div id="simulation_div">
-            <div id="initial_view_div" hidden></div>
-            <div id="initial_view_buttons_div" hidden></div>
+        <div id="simulation_div" class="center-aligned">
+            <div id="initial_view_div" class="center-aligned" hidden></div>
+            <div id="initial_view_buttons_div" class="center-aligned" hidden></div>
             <!-- The grid will be placed here -->
             <div id="grid_div" hidden></div>
             <!-- The draggable bodies will be placed here when the simulation is stopped or has not been started yet -->
