--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
+<html lang="en">
     <head>
         <title></title>
+        <meta charset="utf-8">
         <script type="module" src="/static/js/index.js"></script>
     </head>
     <body></body>
