--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title></title>
         <meta charset="utf-8">
-        <script type="module" src="/static/js/index.js"></script>
+        <script src="/static/js/index.js"></script>
     </head>
     <body></body>
 </html>
