--- a/teleora_editor/index.html
+++ b/teleora_editor/index.html
@@ -3,7 +3,7 @@
     <head>
         <title></title>
         <meta charset="utf-8">
-        <script src="/dist/index.js"></script>
+        <script src="/dist/js/index.js"></script>
     </head>
     <body></body>
 </html>
