Added scripts to load the environments resources without hardcoding the paths.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xml:lang="en">
     <head>
+        <!-- Most of the head content, including the title, will be set by JavaScript -->
         <title></title>
-        <meta charset="utf-8">
         <script src="/static/js/index.js"></script>
     </head>
-    <body></body>
+    <body>
+        <!-- The body content will be set by JavaScript -->
+    </body>
 </html>
