Improved the webserver-less mode.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <head>
         <!-- Most of the head content, including the title, will be set by JavaScript -->
         <title></title>
-        <meta id="debug" debug="true">
+        <!-- Flag for serverless mode. It needs to be true in this file. -->
+        <meta id="serverless_flag" serverless="true">
         <script id="index_script" src="/static/js/index.js"></script>
     </head>
     <body>
