--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <head>
         <!-- Most of the head content, including the title, will be set by JavaScript -->
         <title></title>
-        <!-- Flag for serverless mode. It needs to be true in this file. -->
-        <meta id="serverless_flag" serverless="true">
-        <script id="index_script" src="/static/js/index.js"></script>
+        <script id="index_script" type="module" src="/src/index.ts"></script>
     </head>
     <body>
         <!-- The body content will be set by JavaScript -->
