--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <!-- Most of the head content, including the title, will be set by JavaScript -->
         <title></title>
-        <script id="index_script" type="module" src="/src/index.ts"></script>
+        <script id="index_script" type="module" src="/static/js/index.js"></script>
     </head>
     <body>
         <!-- The body content will be set by JavaScript -->
