--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- WARNING: THIS FILE IS FOR DEBUG BUILDS ONLY. THE PRODUCTION ONE IS IN THE WEBSERVER TEMPLATES DIRECTORY. -->
 <html lang="en" xml:lang="en">
     <head>
         <!-- Most of the head content, including the title, will be set by JavaScript -->
